syntax = "proto3";

option csharp_namespace =   "MicroStore.Bff.Shopping.Grpc.Billing";


service PaymentSystemService{

    rpc GetList(PaymentSystemListRequest) returns(PaymentSystemListResponse);
}


message PaymentSystemListRequest{

}

message PaymentSystemListResponse{
    repeated PaymentSystemResponse items = 1;
    
}
message PaymentSystemResponse{
	string Name = 1;
    string DisplayName =2;
    string Image =3;
    bool IsEnabled =  4;
}